<resources>
    <string name="app_name">Kompa Group</string>
    <string name="app_home">Trang chủ</string>
    <string name="app_news">Tin tức</string>
    <string name="app_prevention">Phòng bệnh</string>
    <string name="app_help">Giúp đỡ</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_home_map">Biểu đồ</string>
    <string name="title_home_local_map">Việt Nam</string>
    <string name="title_home_world_map">Thế Giới</string>

    <string-array name="title_map_array">
        <item>@string/title_home_local_map</item>
        <item>@string/title_home_world_map</item>
    </string-array>
    <string name="app_guide">Hướng dẫn</string>
    <string name="app_setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>